# SimpleRenderEngine

project/: CMakeLists.txt
project/Ex2_Cpp_Foundation/Exercise2-1-HelloPreprocessor/: main.cpp
project/Ex2_Cpp_Foundation/Exercise2-2-SquaredSecrets/: main.cpp
project/Ex2_Cpp_Foundation/Exercise2-3-MineSweeper/: MineSweeper.cpp  MineSweeper.hpp  main.cpp  main_gui.cpp
project/Ex3_Cpp_Pointers/: Snake.cpp  Snake.hpp  SnakeBody.cpp
project/Ex4_Sprites/: Asteroid.cpp  Asteroid.hpp  AsteroidsGame.cpp  AsteroidsGame.hpp  Laser.cpp  Laser.hpp  SpaceShip.cpp  SpaceShip.hpp  asteroids.json
project/Ex6_Wolf/: FirstPersonController.cpp  FirstPersonController.hpp  Wolf3D.cpp  WorldMap.cpp  level0.json
project/Ex8_Bird/: BirdController.cpp  BirdGame.cpp
project/Exercise_1-6/: CMakeLists.txt
